; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_numeric.c_rshift.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_numeric.c_rshift.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUMERIC_SHIFT_WIDTH_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @rshift to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rshift(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @mrb_fixnum_value(i32 0)
  store i32 %9, i32* %3, align 4
  br label %26

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @NUMERIC_SHIFT_WIDTH_MAX, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %14, label %21

14:                                               ; preds = %10
  %15 = load i32, i32* %4, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = call i32 @mrb_fixnum_value(i32 -1)
  store i32 %18, i32* %3, align 4
  br label %26

19:                                               ; preds = %14
  %20 = call i32 @mrb_fixnum_value(i32 0)
  store i32 %20, i32* %3, align 4
  br label %26

21:                                               ; preds = %10
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %5, align 4
  %24 = ashr i32 %22, %23
  %25 = call i32 @mrb_fixnum_value(i32 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %21, %19, %17, %8
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @mrb_fixnum_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
